[tool.poetry]
name = "note-keeper-flask-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "note_keeper_flask_api"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
